fix: footer spacing

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -4,8 +4,8 @@
   padding: 0;
 
   @media #{$tablet} {
-    -webkit-flex: 1 0 180px;
-    flex: 1 0 180px;
+    -webkit-flex: 0 0 fit-content;
+    flex: 0 0 fit-content;
   }
 
   li {
@@ -104,8 +104,8 @@
   padding: 0;
 
   @media #{$tablet} {
-    -webkit-flex: 1 0 310px;
-    flex: 1 0 310px;
+    -webkit-flex: 0 0 fit-content;
+    flex: 0 0 fit-content;
   }
 
   @media (min-width:820px) and (max-width: 1154px){
@@ -121,12 +121,7 @@
     @media #{$tablet} {
       max-width: 400px;
     }
-
-    
-
   }
-
-  
 }
 
 footer {
@@ -142,12 +137,12 @@ footer {
     padding-top: 1rem;
     border-top: $coolgray 1px solid;
     display: flex;
-    justify-content:space-evenly;
-    text-align:center;
-    @media (max-width:1000px) {
+    justify-content: space-evenly;
+    text-align: center;
+    @media (max-width: 1000px) {
       flex-direction: column;
       text-align: center;
-      .text{
+      .text {
         text-align: center;
         padding-top: 10px;
         padding-bottom: 10px;
@@ -155,7 +150,7 @@ footer {
     }
   }
 
-  .twitter-timeline{
+  .twitter-timeline {
     border-radius: 50%;
     justify-content: center;
   }
@@ -188,6 +183,7 @@ footer {
   .footer-columns {
     @extend %flexbox;
     @include flex-flow(wrap);
+    justify-content: space-between;
   }
 
   a {
